# Prompt-Kraft

./: .env.development  .env.example  .env.production  .env.secure.example  .gitignore  ADVANCED_FEATURES_SUMMARY.md  CONTRIBUTING.md  Dockerfile  ENHANCEMENT_SUMMARY.md  FINAL_ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTALL.md  INTEGRATION_SUMMARY.md  MANIFEST.in  README.md  ROBUSTNESS_ENHANCEMENT_SUMMARY.md  advanced_prompt_engine.py  advanced_relevance_engine.py  advanced_settings_manager.py  analytics.py  api_server.py  batch_processor.py  demo_enhancements.py  docker-compose.yml  index.html  install_and_run.bat  install_and_run.py  install_and_run.sh  integrations.py  jest.config.js  package.json  playwright.config.ts  prompt_craft.html  prompt_craft.py  prompt_craft_ui.tsx  pyproject.toml  requirements.txt  setup.cfg  start.sh  (+8 more)
.github/workflows/: ci.yml
docs/: API.md  CONFIGURATION.md  HTTPS_SECURITY.md  SECURITY.md  USER_GUIDE.md
scripts/: setup-secrets.sh
src/: PromptCraftUI.accessible.tsx  PromptCraftUI.tsx  index.css  index.ts  main.tsx  types.ts  utils.ts
src/accessibility/: a11yTesting.ts  ariaManager.ts  keyboardNavigation.ts  screenReaderSupport.ts
src/ai/: mlEnhancer.ts
src/auth/: authSystem.ts
src/compliance/: dataRetention.ts
src/i18n/: i18nManager.ts
src/integration/: secureMLSystem.ts
src/logging/: secureLogger.ts
src/moderation/: contentModerator.ts
src/security/: csp.ts  rateLimiter.ts
tests/: setup.ts  test_prompt_craft.py
tests/e2e/: global-setup.ts  global-teardown.ts  integration.spec.ts  promptcraft-cli.spec.ts  promptcraft-ui.spec.ts
tests/integration/: library.test.ts  ui-components.test.tsx
tests/unit/: PromptCraftUI.test.tsx  utils.test.ts
types/: index.d.ts
