# Setup.cfg for additional tool configuration
[metadata]
name = promptcraft
version = 3.0.1

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    venv,
    .tox,
    *.egg-info
per-file-ignores =
    __init__.py:F401
    tests/*:S101,S311

[isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = prompt_craft
skip = 
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    venv

[mypy-pyperclip]
ignore_missing_imports = True

[mypy-dotenv]
ignore_missing_imports = True